--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -26,6 +26,7 @@
 .table-container {
   display: block;
   overflow-x: auto;
+  margin-top: 5px;
   margin-bottom: 10px;
   box-shadow: var(--ifm-global-shadow-lw) !important;
   border-radius: 8px;
